# hotel_booking_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  schema.sql
apps/bookings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/rooms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: settings.py
project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_bookings.py  test_rooms.py
