[tool.poetry]
name = "hotel-booking-service"
version = "0.1.0"
description = ""
authors = ["kamikaDzeUty <2ivan03112004@mail.ru>"]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^7.4"
pytest-django = "^4.5"
ruff = "^0.4"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["project/migrations", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
extend-ignore = ["D401"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
djangorestframework = "^3.14"
pydantic-settings = "^2.2"
psycopg2-binary = "^2.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
